# syto-api

./: .coveragerc  .pre-commit-config.yaml  README.md  manage.py  openapi-schema.yml  openapi.yml  pyproject.toml  pytest.ini  requirements.txt
syto/: asgi.py  settings.py  urls.py  wsgi.py
syto_api/: __init__.py  admin.py  apps.py  global_access_conditions.py  models.py  routers.py  serializers.py  services.py  signals.py  urls.py  views.py  viewsets.py
syto_api/migrations/: 0001_initial.py  0001_squashed_0005_auto_20210329_1040.py  0002_auto_20210303_1124.py  0002_auto_20210403_1846.py  0003_auto_20210309_1948.py  0003_auto_20210407_1115.py  0004_auto_20210310_1905.py  0005_auto_20210329_1040.py
syto_api/static/syto_api/: openapi.json
syto_api/templates/syto_api/: swagger-ui.html
syto_panel/: apps.py  loader.py  urls.py  views.py
syto_panel/static/syto_panel/: manifest.json
syto_panel/static/syto_panel/css/: chunk-10df53d4.b59b1c38.css  chunk-318d2492.b6fc02d8.css  chunk-497e3e48.240e2f1f.css  chunk-4b54f2cf.5fd9917a.css  (+4 more)
syto_panel/templates/syto_panel/: index.html
tests/: conftest.py  settings.py  test_availability_hours_serializer.py  test_availability_hours_viewset.py  test_availability_list_view.py  test_availability_overview_list_view.py  test_availability_period_model.py  test_availability_period_serializer.py  test_availability_period_viewset.py  test_avaliability_period_model.py  test_slot_serializer.py  test_slot_viewset.py  test_syto_api.py  test_total_availability_list_view.py  test_user_model.py  test_user_serializer.py  test_user_viewset.py
(+32 files in other folders)
